# mlp

./: .gitignore  .gitmodules  AGENTS.md  README.md  SETUP.md  TODO  TODO.md  code_optimization.md  distance_matrix  graficos.ipynb  inst-list  lista-versoes-pebas  listinha  load  loader.md  lua-bench-instances.txt  mailist  mailist-agrvai  mailist-cp  mailist-sbc  makefile  manager_bm.py  notes  run_bm.py  setup.sh  tsp  virtu_test.txt
c/: Data.h  IMPLEMENTATION.md  build.sh  data.c  data.h  main.c  makefile  notas  run_c.sh  solve  types.c  types.h
c_asm/: data.c  main.c  makefile  reg-use  search.s  solve  test  types.c
cplusplus/: Data.hpp  IMPLEMENTATION.md  MLP.cpp  MLP.hpp  build.sh  callgrind.out.73159  main.cpp  makefile  notas  readData.cpp  run.sh  run_cpp.sh  solve  tInfo.hpp
cppOOP/: Data.hpp  MLP.cpp  MLP.hpp  main.cpp  makefile  notas  readData.cpp  solve  tData.cpp  tData.hpp  tInfo.cpp  tInfo.hpp  tSolution.cpp  tSolution.hpp
csharp/: Data.cs  GILS_RVND.cs  IMPLEMENTATION.md  build.sh  build_cli.sh  csharp.csproj  main.cs  perf2calltree.py  profile.py  profile.sh  run.sh  run_dotnet.sh  run_mcs.sh  source  tInfo.cs  tSolution.cs
data/: cplusplus.csv  csharp.csv  fortran.csv  java.csv  javascript.csv  julia.csv  (+5 more)
rust/: Cargo.toml  Data.rs  build.rs  build.sh  build_rust.sh  callgrind.out.3544244  main.rs  notas  run_rust.sh
rust/main_/: Cargo.toml
rust/main_/src/: data.rs  main.rs
rust/rust-cargo/: Cargo.toml
rust/rust-cargo/src/: Data.rs
rust/src/: data.rs  lib.rs  main.rs  subseq.rs  traits.rs  types.rs
rust/src/data/: sz.rs
(+132 files in other folders)
